fix: do not wrap tooltip text content when width props is omitted

--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -264,6 +264,11 @@
 
 .textContent {
   text-align: center;
+  white-space: nowrap;
+}
+
+.textContentHasWidth {
+  text-align: center;
   white-space: normal;
   overflow-wrap: break-word;
 }
